--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "civic-pass-template",
   "version": "0.1.0",
   "dependencies": {
-    "@civic/solana-gateway-react": "^0.4.13",
+    "@civic/solana-gateway-react": "^0.9.0-beta.3",
     "@solana/wallet-adapter-base": "^0.8.1",
     "@solana/wallet-adapter-react": "^0.14.1",
     "@solana/wallet-adapter-react-ui": "^0.7.0",
     "@solana/wallet-adapter-wallets": "^0.13.0",
-    "@solana/web3.js": "^1.31.0",
+    "@solana/web3.js": "^1.43.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3"
