--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "civic-pass-template",
   "version": "0.1.0",
   "dependencies": {
-    "@civic/solana-gateway-react": "^0.9.2",
-    "@solana/wallet-adapter-base": "^0.8.1",
-    "@solana/wallet-adapter-react": "^0.14.1",
-    "@solana/wallet-adapter-react-ui": "^0.7.0",
-    "@solana/wallet-adapter-wallets": "^0.13.0",
-    "@solana/web3.js": "1.39.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@civic/solana-gateway-react": "^0.9.3-beta.0",
+    "@solana/wallet-adapter-base": "0.8.1",
+    "@solana/wallet-adapter-react": "0.14.1",
+    "@solana/wallet-adapter-react-ui": "0.7.0",
+    "@solana/wallet-adapter-wallets": "0.13.0",
+    "@solana/web3.js": "^1.61.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "^4.0.3"
   },
   "scripts": {
