--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "civic-pass-template",
   "version": "0.1.0",
   "dependencies": {
-    "@civic/solana-gateway-react": "0.10.0-beta.0",
+    "@civic/solana-gateway-react": "^0.10.0",
     "@solana/wallet-adapter-base": "^0.9.10",
     "@solana/wallet-adapter-react": "^0.15.9",
     "@solana/wallet-adapter-react-ui": "^0.9.12",
@@ -15,6 +15,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
@@ -24,9 +25,9 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
