--- a/package.json
+++ b/package.json
@@ -2,25 +2,38 @@
   "name": "civic-pass-template",
   "version": "0.1.0",
   "dependencies": {
-    "@civic/solana-gateway-react": "^0.9.3-beta.0",
-    "@solana/wallet-adapter-base": "0.8.1",
-    "@solana/wallet-adapter-react": "0.14.1",
-    "@solana/wallet-adapter-react-ui": "0.7.0",
-    "@solana/wallet-adapter-wallets": "0.13.0",
-    "@solana/web3.js": "^1.61.1",
+    "@civic/solana-gateway-react": "^0.10.0",
+    "@solana/wallet-adapter-base": "^0.9.10",
+    "@solana/wallet-adapter-react": "^0.15.9",
+    "@solana/wallet-adapter-react-ui": "^0.9.12",
+    "@solana/wallet-adapter-wallets": "^0.17.2",
+    "@solana/web3.js": "^1.50.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^13.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "5.0.1",
+    "typescript": "^4.4.2",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
-      "react-app"
+      "react-app",
+      "react-app/jest"
     ]
   },
   "browserslist": {
